# VIDEOANONYMIZATION

./: .gitignore  AGENTS.md  GUIDE.txt  README.md  cli.py  example_gui.py  example_gui_advanced.py  pyproject.toml  requirements.txt  run.bat  run.cmd  run.ps1  setup_venv.bat  setup_venv.sh  test_gui_simple.py  video_anonymizer.py
configs/: __init__.py  blur.yaml  config.yaml
configs/trackers/: csrt.yaml  kalman.yaml  kcf.yaml  visualisation.yaml
input/: __init__.py
models/: __init__.py
src/detector/: face_hand_detector.py
src/gui/: __init__.py  detection_viewer.py
src/models/: detection.py
src/video_anonymizer/: __init__.py  __main__.py  bootstrap.py  cli.py  tui.py  video_catalog.py
src/video_anonymizer/anonymizer/: blur.py
src/video_anonymizer/detection/: __init__.py  face_detector.py  hog_detector.py  lpm_wrapper.py  mediapipe_detector.py  structures.py
src/video_anonymizer/gui/: detection_viewer.py
src/video_anonymizer/io/: __init__.py  frame_writer.py  video_reader.py
src/video_anonymizer/tracking/: __init__.py  base_tracker.py  byte_tracker.py  csrt.py  iou_tracker.py  kalman.py  kcf.py  opencv_tracker.py  structures.py  track.py  vit_tracker.py
src/video_anonymizer/utils/: __init__.py  anonymizer.py  backfill.py  cmc.py  face_embedder.py  frame_history.py  hardware.py  logging.py  logging_utils.py  overlap.py  overlap_fn.py
tests/: __init__.py  bench_face_params.py  make_demo_video.py  test_anonymizer.py  test_backfill.py  test_bodycam_full.py  test_helpers.py  test_hog_real.py  test_pipeline_mock.py  test_tui.py
